--- a/Python/Множественное наследование.md
+++ b/Python/Множественное наследование.md
@@ -43,4 +43,4 @@ country.make_cheese()
 "Cheese!"
 ```
 
-Слово [[Mixin]] добавлять необязательно, но рекомендуется для лучшей читаемости.
+Слово [[mixin]] добавлять необязательно, но рекомендуется для лучшей читаемости.
